# hello-github

./: .gitignore  .~lock.godnux_notes.odt#  2025-09-19-halfway-there.md  CMakeLists.txt  README.md  WARNING.md  _config.yml  _posts  tkinter_editor.py
_posts/: 2025-09-19-halfway-there.md  2025-09-21-overcoming-the-arch.md  2025-09-22-mistral-hermes-onboard.md  2025-09-24-trapped-in-ollamas-beam.md  2025-09-25-Hermes-Goes-Psycho  2025-09-25-Hermes-Goes-Psycho.md  2025-10-21-the-shell-speaks.md  2025-11-14-godnux-kernel.md
apps/codeeditor/: README.md  codeeditor.py
apps/deepseekchat/: .gitignore  README.md  devlog.md
apps/deepseekchat/scripts/: APIManager.gd  MainMenu.gd
apps/godnux/: INSTRUCTIONS.md  LIABILITY.md  LICENSE  MANIFESTO.md  README.md
apps/godnux/_posts/: 2025-09-19-halfway-there.md  2025-09-22-mistral-hermes-onboard.md  2025-09-25-Hermes-Goes-Psycho.md  2025-09-26-prince-of-oops.md
apps/godnux/apps/deepseekchat/: project.godot
apps/godnux/apps/deepseekchat/scenes/: ChatInterface.tscn  MainMenu.tscn
apps/godnux/apps/deepseekchat/scripts/: ModeManager.gd  chat_interface.gd
apps/godnux/apps/projectsummarizer/: projecttotext.py
apps/godnux/include/: object.hpp
apps/godnux/include/godnux/: test_module.hpp
apps/godnux/include/godnux/filesystem/: filesystem.hpp  vfs.hpp
apps/godnux/include/godnux/ipc/: ipc_manager.hpp
apps/godnux/include/godnux/memory/: memory_manager.hpp
apps/godnux/include/godnux/module/: module_manifest.hpp  module_registry.hpp  module_security_manager.hpp  shared_library_loader.hpp
apps/godnux/include/godnux/security/: capabilities.hpp
apps/godnux/include/godnux/security/include/godnux/security/: capabilities.hpp
apps/godnux/modules/experimental/test_module/: CMakeLists.txt
apps/godnux/modules/experimental/test_module/src/: minimal_test.cpp
apps/godnux/modules/experimental/test_module/tests/: test_loading.cpp  test_test_module.cpp
apps/godnux/modules/minimal/: minimal_module.cpp
apps/godnux/modules/module_template/: CMakeLists.txt
apps/godnux/src/kernel/: CMakeLists.txt  kernel.cpp  main.cpp  module_entry_points.cpp  simple_main.cpp  test_module.cpp
apps/godnux/src/module/: module.cpp  module_discovery.cpp  test_module.cpp
apps/godnux/src/process/: process.cpp  process_manager.cpp
apps/godnux/src/security/: capabilities.cpp  trust_store.cpp
apps/projectsummarizer/: README.md
assets/images/: placeholder.txt
include/: godnux_kernel.hpp
include/godnux/: kernel.hpp  object.hpp  shared_libarary_loader.hpp  test_object.hpp
include/godnux/cli/: godnuxctl.hpp
include/godnux/logging/: logger.hpp
include/godnux/module/: dynamic_module.hpp  module.hpp  module_discovery.hpp  module_manager.hpp  test_module.hpp
include/godnux/process/: process.hpp  process_manager.hpp
include/godnux/security/: security_manager.hpp  trust_store.hpp
modules/experimental/test_module/config/: module.json
modules/experimental/test_module/include/: test_module.h
modules/experimental/test_module/src/: test_module.cpp
src/cli/: godnuxctl.cpp
src/ipc/: ipc_manager.cpp
src/kernel/: module.cpp  test_object.cpp
src/memory/: memory_manager.cpp
src/module/: dynamic_module.cpp  module_registry.cpp  module_security_manager.cpp  shared_library_loader.cpp
src/object/: object.cpp
src/security/: security_manager.cpp
